# python-project-template-for-claude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  setup.sh
